--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,945 @@
 main {
-  text-align: center;
+/*  text-align: center;
   vertical-align: center;
-  line-height: 100vh
+   line-height: 100vh */
+}
+body{
+    padding: 0;
+    margin:0;
+    font-family: 'Changa', sans-serif;
+    overflow-x: hidden;
+}
+:focus, :focus-visible{
+    outline: none;
+}
+img{
+    max-width:100%;
+}
+.container{
+    max-width:1280px;
+}
+nav.navbar{
+    padding:0;
+}
+.navbar-brand{
+    padding:8px 0;
+    margin:0;
+}
+nav.navbar a.nav-link{
+    padding: 0 15px;
+    margin:0;
+    font-size: 18px;
+    font-weight: 600;
+    color:#fc006d;
+    text-decoration: none;
+    /* border-bottom:2px solid transparent; */
+    transition: all linear 0.3s;
+}
+nav.navbar a.nav-link.active, nav.navbar a.nav-link:hover{
+   /* border-bottom:2px solid #222; */
+   color:#040707;
+   transition: all linear 0.3s;
+}
+nav.navbar .donate_btn{
+    position: relative;
+    margin-right: -38px;
+    margin-left: 40px;
+}
+
+nav.navbar .donate_btn a.nav-link{
+    font-size: 20px;
+    line-height: 70px;
+    padding: 0 45px;
+    color:#fc006d;
+    background: #fff;
+    text-transform: uppercase;
+    /* margin-right:-90px; */
+}
+.navbar .navbar-nav{
+    align-items: center;
+}
+.carousel-caption{
+    position: static;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+h5{
+    font-size: 21px;
+    font-weight: 600;
+    color:#222;
+    padding: 0;
+    margin:0;
+    display: flex;
+    align-items: center;
+}
+h5 span{
+    width:50px;
+    height:1px;
+    background: #fc006d;
+    margin:0 12px;
+    display:inline-flex;
+}
+h3{
+    font-size: 65px;
+    line-height: 60px;
+    font-weight: 600;
+    color:#fc006d;
+    text-align: left;
+    padding:10px 0 0 0;
+    margin:0;
+}
+p{
+    font-size: 16px;
+    line-height:25px;
+    font-weight: 400;
+    color:#222;
+    text-align: left;
+    padding:20px 0;
+    margin:0;
+}
+a.join_journey, .join_journey{
+    padding: 0 15px;
+    font-size:16px;
+    line-height:54px;
+    font-weight: 400;
+    color:#fff;
+    text-align:center;
+    text-decoration: none;
+    background:#fc006d;
+    border: 0;
+    display:inline-flex;
+    align-items: center;
+    transition: all linear 0.3s;
+}
+button.join_journey{
+    padding: 0 40px;
+}
+a.join_journey:hover, .join_journey:hover{
+    background: #222;
+    color:#fff;
+    transition: all linear 0.3s;
+}
+a.join_journey .fa{
+    margin-right:10px;
+}
+.carousel-control-next, .carousel-control-prev{
+    width:64px;
+    height:64px;
+    background:#fc006d;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 1;
+}
+.carousel-control-next{
+    background: #fff;
+    color:#fc006d;
+}
+.carousel-control-prev-icon, .carousel-control-next-icon{
+    background-image: none;
+    width:18px;
+    height:1px;
+    background:#fff;
+    position: relative;
+}
+.carousel-control-prev-icon:after{
+    content: '';
+    position: absolute;
+    left: 0px;
+    top: -2px;
+    width: 5px;
+    height: 5px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    transform: rotate(45deg);
+}
+.carousel-control-next-icon{
+    background: #000;
+}
+.carousel-control-next-icon:after{
+    content: '';
+    position: absolute;
+    right: 0px;
+    top: -2px;
+    width: 5px;
+    height: 5px;
+    border-left: 1px solid #000;
+    border-bottom: 1px solid #000;
+    transform: rotate(-135deg);
+}
+.home_banner{
+    position: relative;
+    margin-top:-35px;
+    padding: 0 0 120px 0;
+}
+.about_part{
+    background: url(../images/white_compass.jpg) no-repeat top right;
+    position: relative;
+    min-height:888px;
+    display:flex;
+    align-items: center;
+    z-index: 1;
+}
+.about_part h5 span, .other_people h5 span, .team_member h5 span{
+    margin-left: 0;
+}
+.about_part p{
+    color:#666;
+}
+.about_part p a{
+    text-decoration: none;
+    color:#fc006d;
+}
+.foundrising_campaign{
+    padding:15px 0 40px 0;
+    margin:0;
+}
+.foundrising_campaign ul{
+    padding: 0;
+    margin:0;
+    list-style: none;
+    display:flex;
+}
+.foundrising_campaign ul li{
+    display: flex;
+    flex-grow: 1;
+    /* flex-shrink: 0; */
+    margin-right: 15px;
+}
+.other_people{
+    padding: 95px 0;
+    margin:-70px 0 0 0;
+    background: #000;
+    position: relative;
+}
+.other_people a.join_journey, .footer a.join_journey{
+    line-height: 70px;
+    padding: 0 50px;
+    font-size: 26px;
+    font-weight: 600;
+    margin:35px 0 0 0;
+}
+.other_people h5{
+    color:#fff;
+    margin:0 0 8px 0;
+}
+.team_member{
+    background: url(../images/team_compass.jpg) no-repeat top left #fff;
+    padding: 60px 0 75px 0;
+    margin:0;
+    position: relative;
+}
+.team_image{
+    margin: 20px 0 10px 0;
+}
+.team_member .item h4{
+    padding: 0;
+    margin:0;
+    font-size: 29px;
+    font-weight: 600;
+    color:#fc006d;
+}
+.team_member .item h6{
+    padding: 0;
+    margin:0;
+    font-size:17px;
+    font-weight: 600;
+    color:#616161;
+}
+.team_member .item p{
+    padding:12px 0 20px 0;
+    margin:0;
+    font-size:17px;
+    font-weight: 400;
+    color:#666;
+}
+.read_more a{
+    font-size: 16px;
+    font-weight: 600;
+    color:#fc006d;
+    text-decoration: none;
+    display:flex;
+    align-items: center;
+    transition: all linear 0.3s;
+}
+.read_more a span{
+    width:50px;
+    height:1px;
+    background:#fc006d;
+    margin:0 0 0 15px;
+    display:inline-flex;
+    transition: all linear 0.3s;
+    position: relative;
+    right:0;
+}
+.read_more a:hover{
+    color:#222;
+    transition: all linear 0.3s;
+}
+.read_more a:hover span{
+    background:#222;
+    transition: all linear 0.3s;
+    position: relative;
+    right:-10px;
+}
+.owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev{
+    width: 45px;
+    height: 45px;
+    /* display: flex; */
+    border-radius: 100px;
+    position:absolute;
+    border: 1px solid #d0d0d0;
+}
+.owl-carousel .owl-nav button.owl-next span, .owl-carousel .owl-nav button.owl-prev span{
+    width: 16px;
+    height: 1px;
+    background: #fc006d;
+    position: absolute;
+    font-size: 0;
+    display: inline-flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.owl-carousel .owl-nav button.owl-next span:after{
+    content: '';
+    position: absolute;
+    width: 7px;
+    right: 0;
+    top: -3px;
+    height: 7px;
+    border-left: 1px solid #fc006d;
+    border-bottom: 1px solid #fc006d;
+    transform: rotate(-135deg);
+}
+.owl-carousel .owl-nav button.owl-prev span:after{
+    content: '';
+    position: absolute;
+    width: 7px;
+    left: 0;
+    top: -3px;
+    height: 7px;
+    border-left: 1px solid #fc006d;
+    border-bottom: 1px solid #fc006d;
+    transform: rotate(45deg);
+}
+.owl-nav{
+    position: absolute;
+    top:calc(50% - 23px);
+    width:100%;
+}
+.owl-carousel .owl-nav button.owl-prev{
+    left:-55px;
+    display:none;
+}
+.owl-carousel .owl-nav button.owl-next{
+    right:-90px;
+}
+.footer{
+    padding: 85px 0 35px 0;
+    margin:0;
+    background: url(../images/footer_bg.jpg) repeat-x top left  #fc006d;
+}
+.footer h3{
+    padding: 0;
+    margin:0;
+    font-size: 48px;
+    font-weight: 600;
+    color:#fff;
+    line-height: 48px;
+    text-transform: uppercase;
+}
+.footer h5{
+    padding:15px 0 35px 0;
+    margin:0;
+    font-size:21px;
+    font-weight: 400;
+    color:#fff;
+}
+.footer h6{
+    padding:10px 0 15px 0;
+    margin:0;
+    font-size:21px;
+    font-weight: 400;
+    color:#fff;
+    text-align: right;
+}
+.footer a.join_journey{
+    background: #fff;
+    color:#fc006d;
+    text-transform: uppercase;
+}
+.paypal_list{
+    margin:14px 0 0 0;
+    padding: 14px 5px 10px 5px;
+    border-radius: 4px;
+    border:2px solid #fff;
+    position: relative;
+    display:inline-block
+}
+.paypal_list ul{
+    padding: 0;
+    margin:0;
+    list-style: none;
+    display:flex;
+}
+.paypal_list ul li{
+    padding: 0 5px;
+    margin:0;
+}
+.paypal_iamge{
+    position: absolute;
+    left:10px;
+    top:-10px;
+}
+.bottom_footer{
+    border-top:1px solid #fe71ae;
+    padding: 25px 0 0 0;
+}
+.footer_link{
+    padding: 0;
+    margin:0;
+}
+.footer_link ul{
+    padding: 0;
+    margin:0;
+    list-style: none;
+    display:flex;
+}
+.footer_link ul li{
+    padding: 0 10px;
+    margin:0;
+    list-style: none;
+    border-right: 1px solid #fff;
+    line-height: 16px;
+}
+.footer_link ul li:first-child{
+    padding-left: 0;
+}
+.footer_link ul li:last-child{
+    border: 0;
+}
+.footer_link ul li a{
+    font-size:16px;
+    font-weight:600;
+    color:#fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    line-height: 16px;
+}
+.copyright_txt{
+    padding: 12px 0 0 0;
+    font-size:14px;
+    font-weight:400;
+    color:#fff;
+    text-decoration: none;
+}
+.copyright_txt a{
+    font-size:14px;
+    font-weight:400;
+    color:#fff;
+    text-decoration: none;
+}
+.our_mission{
+    padding: 80px 0 85px 0;
+    margin:0;
+}
+.tab-content>.tab-pane{
+    border: 1px solid #e2e2e2;
+    padding: 58px;
+    min-height: 384px;
+}
+.nav-pills .nav-link{
+    padding: 0 37px;
+    margin:0 0 15px 0;
+    font-size: 31px;
+    font-weight: 600;
+    line-height: 116px;
+    color:#fc006d;
+    text-transform: uppercase;
+    text-align: center;
+    white-space:nowrap;
+    border-radius: 0;
+    border:1px solid #dfdfdf;
+    /* border-left:8px solid #fc006d; */
+    position: relative;
+    opacity:0.41;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link, .nav-pills .nav-link:hover{
+    opacity: 1;
+    background:none;
+    color: #fc006d;
+    transition: all linear 0.3s;
+}
+.nav-pills .nav-link:after{
+    content:'';
+    position: absolute;
+    left:0;
+    top:0;
+    height:100%;
+    width:8px;
+    background: #fc006d;
+    opacity:0;
+    transition: all linear 0.3s;
+}
+.nav-pills .nav-link.active:after, .nav-pills .show>.nav-link:after, .nav-pills .nav-link:hover:after{
+    opacity: 1;
+    transition: all linear 0.3s;
+}
+.tab-content{
+    flex-grow:1;
+}
+ .navbar:after{
+    content:'';
+    position: absolute;
+    right:0;
+    top:0;
+    width: calc(50vw - 420px);
+    height:100%;
+    background: #fc006d;
+}
+.navbar .container, .home_banner .container{
+    position: relative;
+    z-index: 1;
+}
+.home_banner:after{
+    content:'';
+    position: absolute;
+    right:0;
+    top:0;
+    width: calc(50vw - 420px);
+    height:100%;
+    background:url(../images/homebannerbg.jpg)no-repeat top left #fc006d;
+}
+.about_part:after{
+    content:'';
+    position: absolute;
+    left:0;
+    top:0;
+    width: calc(50vw - 420px);
+    height:100%;
+    background:url(../images/about_bg.jpg)no-repeat top left;
+    background-size: cover;
+}
+.about_txt{
+    position: absolute;
+    left: calc(50vw - 735px);
+    top: 271px;
+    font-size: 169px;
+    font-weight: bold;
+    text-transform: uppercase;
+    transform: rotate(90deg);
+    color: #fff;
+    text-shadow: 0 0 1px rgb(0 0 0 / 32%);
+}
+.other_people{
+    background: url(../images/other_peoplebg.jpg) no-repeat;
+    background-size: cover;
+}
+.team_member:after{
+    content:'';
+    position: absolute;
+    right:0;
+    top:-38px;
+    width: calc(50vw - 558px);
+    height:100%;
+    background:url(../images/team_member_bg.jpg) no-repeat;
+    background-size: cover;
+}
+.teammember_txt{
+    position: absolute;
+    right:calc(50vw - 918px);
+    top: 300px;
+    font-size: 169px;
+    font-weight: bold;
+    text-transform: uppercase;
+    transform: rotate(90deg);
+    color: #fff;
+    text-shadow: 0 0 1px rgb(0 0 0 / 32%);
+}
+.text-right{
+    text-align: right;
+}
+.inner_banner{
+    min-height: 355px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+.inner_banner h2{
+    padding: 0;
+    margin:0;
+    font-size: 65px;
+    font-weight: 600;
+    color: #fc006d;
+    text-align: center;
+    text-transform: uppercase;
+}
+.tab-content>.active{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.navbar.innerpage:after{
+    display:none;
+}
+nav.navbar.innerpage .donate_btn a.nav-link{
+    background: #fc006d;
+    color:#fff;
+    transition: all linear 0.3s;
+}
+nav.navbar.innerpage .donate_btn a.nav-link:hover{
+    background: #222;
+    transition: all linear 0.3s;
+}
+.fixed-top{
+    background: #fff;
+    box-shadow: 0 0 5px rgb(0 0 0 / 0.20);
+}
+.about_part.about_page{
+    min-height:780px;
+}
+.contact_part{
+    padding: 60px 0;
+    margin:0;
+    position: relative;
+}
+.contact_part:after{
+    content:'';
+    position: absolute;
+    right:0;
+    top:0;
+    width:calc(50vw - 400px);
+    height:100%;
+    background: #fc006d;
+}
+.contact_part .container{
+    position: relative;
+    z-index: 1;
+}
+.form-group{
+    padding: 0 0 15px 0;
+    margin:0;
+    display:flex;
+}
+.form-group label{
+    font-size: 14px;
+    line-height: 38px;
+    font-weight:600;
+    color:#222;
+    padding: 0;
+    margin: 0;
+    width:40%;
+}
+.form-group .from-control{
+    background: #fff;
+    font-size: 14px;
+    line-height: 36px;
+    font-weight:600;
+    color:#222;
+    width:50%;
+    border-radius: 0;
+    border:1px solid #dfdfdf;
+}
+.form-group textarea.from-control{
+    resize: none;
+    height:80px;
+    line-height: normal;
+}
+.contact_righttxt{
+    background: #222;
+    padding:55px 30px;
+    margin:0;
+    min-height:409px;
+}
+.contact_righttxt h4{
+    padding: 0 0 15px 0;
+    margin:0;
+    font-size: 20px;
+    font-weight: 600;
+    color:#fff;
+}
+.info_list{
+    padding: 0;
+    margin:0;
+}
+.info_list ul{
+    padding: 0;
+    margin:0;
+    list-style: none;
+}
+.info_list ul li{
+    padding: 0 0 10px 0;
+    margin:0;
+    font-size: 14px;
+    line-height: 38px;
+    font-weight:500;
+    color:#fff;
+}
+.info_list ul li a{
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 38px;
+    font-weight:500;
+    color:#fff;
+}
+.info_list ul li .fa{
+    font-size: 20px;
+    margin-right: 20px;
+    width: 20px;
+    color: #fc006d;
+}
+
+@media(max-width:1350px) and (min-width:1025px){
+
+    nav.navbar .donate_btn{
+        margin-right:0;
+    }
+    .teammember_txt{
+        right: calc(50vw - 70%);
+    }
+}
+
+@media(max-width:1024px) and (min-width:981px){
+    .navbar:after{
+        width: calc(50vw - 277px);
+    }
+    .home_banner:after{
+        width: calc(50vw - 277px);
+    }
+    .about_part:after{
+        width: calc(50vw - 260px);
+    }
+    .about_txt{
+        left: calc(50vw - 579px);
+    }
+    .teammember_txt{
+        right: calc(50vw - 742px)
+    }
+    .team_member:after{
+        width: calc(50vw - 383px);
+    }
+    h3{
+        font-size: 45px;
+        line-height: 40px;
+    }
+    .footer h3{
+        font-size: 36px;
+        line-height: 38px;
+    }
+    .footer_link ul li a{
+        font-size: 14px;
+    }
+    .footer h6{
+        font-size: 18px;
+    }
+    .bottom_footer{
+        margin-top:20px;
+    }
+    nav.navbar .donate_btn{
+        margin-right:0;
+    }
+    nav.navbar .donate_btn a.nav-link{
+        padding: 0 30px;
+    }
+
+}
+@media(max-width:999px) {
+    .navbar:after,.home_banner:after, .about_part:after, .about_txt, .teammember_txt, .team_member:after{
+        display:none;
+    }
+    .navbar-toggler{
+        border: 0;
+    }
+    .inner_banner{
+        margin-bottom: 30px;
+    }
+    
+}
+
+@media(max-width:980px) and (min-width:768px){
+    .home_banner{
+        margin-top:0px;
+        padding-bottom: 20px;
+    }
+    h3{
+        font-size:36px;
+        line-height:36px;
+    }
+    .about_part{
+        min-height: inherit;
+    }
+    .other_people{
+        margin-top:40px;
+    }
+    .team_member .item h4{
+        font-size: 22px;
+    }
+    .team_member{
+        padding: 40px 0 0 0;
+    }
+    .team_member .item p{
+        font-size: 16px;
+    }
+    .footer h3{
+        font-size: 36px;
+        line-height: 36px;
+    }
+    .footer h6{
+        font-size: 16px;
+    }
+    .other_people a.join_journey, .footer a.join_journey{
+        padding: 0 30px;
+    }
+    .bottom_footer{
+        margin-top: 30px;
+    }
+    .footer_link ul li a{
+        font-size: 13px;
+    }
+    .our_mission{
+        padding: 40px 0;
+    }
+    .carousel-control-next, .carousel-control-prev{
+        transition: all linear 0.3s;
+        opacity: 0;
+    }
+    .carousel:hover .carousel-control-next, .carousel:hover .carousel-control-prev{
+        transition: all linear 0.3s;
+        opacity: 1;
+    }
+    .navbar .navbar-nav{
+        flex-direction: row;
+        margin-bottom: 10px;
+        justify-content: flex-end;
+    }
+    nav.navbar a.nav-link{
+        padding: 0 8px;
+    }
+    nav.navbar .donate_btn a.nav-link{
+        background: #fc006d;
+        color:#fff;
+        padding: 0 30px;
+    }
+    nav.navbar .donate_btn {
+        margin-right: 0;
+        margin-left: 20px;
+    }
+    .contact_part:after{
+        width: calc(50vw - 250px);
+    }
+
+}
+@media(max-width:767px) {
+    .navbar .navbar-nav {
+        align-items: flex-start;
+    }
+    nav.navbar .donate_btn a.nav-link{
+        background: #fc006d;
+        color:#fff;
+        padding: 0 30px;
+    }
+    nav.navbar .donate_btn {
+        margin-right: 0;
+        margin-left: 0px;
+        margin-bottom: 30px;
+    }
+    h3{
+        font-size: 36px;
+        line-height:42px;
+    }
+    .home_banner{
+        margin-top:0;
+        padding: 0 0 40px 0;
+    }
+    .about_part{
+        min-height: inherit;
+        padding-bottom: 40px;
+    }
+    h3 br{
+        display: none;
+    }
+    .owl-carousel .owl-nav button.owl-next{
+        right:0;
+    }
+    .owl-carousel .owl-nav button.owl-prev{
+        left:0;
+    }
+    .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev{
+        background: #fff;
+    }
+    .team_member{
+        padding: 40px 0;
+    }
+    .our_mission{
+        padding: 0 0 40px 0;
+    }
+    .ourmission_tab{
+        flex-direction: column;
+    }
+    .ourmission_tab .nav-pills{
+        flex-direction: row!important;
+    }
+    .nav-pills .nav-link{
+        padding: 0 15px;
+        font-size: 18px;
+        line-height: 42px;
+    }
+    .tab-content>.tab-pane{
+        min-height: inherit;
+    }
+    .footer h3{
+        font-size: 30px;
+        line-height: 36px;
+    }
+    .bottom_footer{
+        margin-top:20px;
+    }
+    .footer_link ul{
+        flex-wrap: wrap;
+    }
+    .footer_link ul li{
+        padding: 0 20px 0 0;
+        margin:0 0 10px 0;
+        border:0;
+    }
+    .footer .text-right{
+        text-align: left;
+    }
+    .carousel-control-next, .carousel-control-prev{
+        transition: all linear 0.3s;
+        opacity: 0;
+    }
+    .carousel:hover .carousel-control-next, .carousel:hover .carousel-control-prev{
+        transition: all linear 0.3s;
+        opacity: 1;
+    }
+    nav.navbar a.nav-link{
+        padding: 5px 0;
+    }
+    .navbar-brand img{
+        max-width:120px;
+    }
+    .inner_banner{
+        min-height: 250px;
+    }
+    .inner_banner h2{
+        font-size: 40px;
+    }
+    .contact_part:after{
+        display:none;
+    }
+    .contact_part{
+        padding: 40px 0;
+    }
+    .contact_righttxt{
+        margin-top:30px;
+        min-height: auto;
+        padding: 30px;
+    }
+    .form-group .from-control{
+        width:60%;
+    }
+
 }
